--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,11 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto">
-            <li class="nav-item active">
+           <li class="nav-item active">
               <%= link_to "Home", "/restaurants", class: "nav-link" %>
+            </li>
+            <li class="nav-item active">
+              <%= link_to "New restaurant", new_restaurant_path, class: "nav-link" %>
             </li>
             <li class="nav-item">
               <%= link_to "Messages", "#", class: "nav-link" %>
